Fixed rows overflowing their containers by resetting the row margins to zero.

--- a/css/forum.css
+++ b/css/forum.css
@@ -21,3 +21,7 @@ body{
 .entry1, .entry3{
 	background-color: inherit;
 }
+
+.row {
+	margin: 0;
+}
