--- a/css/portal.css
+++ b/css/portal.css
@@ -37,3 +37,7 @@ h1{
 .navbar-right{
 	margin-right: 5px;
 }
+
+.row {
+	margin: 0;
+}
